<resources>
    <string name="app_name">Likert</string>
    <string name="error">error</string>
    <string name="success">success</string>
    <string name="tentar_novamente">tentar novamente</string>
    <string name="enviar">enviar</string>
    <string name="caracteres">140 caracteres</string>
    <string name="o_que_foi_bom">o que foi bom?</string>
    <string name="adorei">adorei</string>
    <string name="gostei">gostei</string>
    <string name="sei_l">sei lá</string>
    <string name="n_gostei">não\ngostei</string>
    <string name="ruim">ruim</string>
    <string name="exp">o que achou\ndessa experiência?</string>
    <string name="success_text">obrigado por dedicar\no seu tempo ;)</string>
    <string name="success_body">vamos analisar o seu comentário\npara deixar o app Itaú ainda\nmelhor para você.</string>
    <string name="error_text">desculpe, não foi\npossível enviar sua\navaliação :(</string>
    <string name="error_body">verifique sua conexão de\ninternet e tente novamente</string>

    <string name="question_ruim">o que foi ruim?</string>
    <string name="question_n_gostou">o que você não gostou?</string>
    <string name="question_achou">o que você achou?</string>
    <string name="question_gostou">o que você gostou?</string>
    <string name="question_adorou">o que você adorou?</string>
    <string name="title_activity_main">Main</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="recycler_toolbar">recycler</string>
    <string name="table_toolbar">table</string>
</resources>
